Using square camera

--- a/app/src/main/res/layout/content_home_page.xml
+++ b/app/src/main/res/layout/content_home_page.xml
@@ -9,6 +9,18 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_home_page" tools:context=".HomePage">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Launch Camera"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/image"
+        android:onClick="launchCamera"/>
+
 </RelativeLayout>
