--- a/app/src/main/res/layout/activity_update_page.xml
+++ b/app/src/main/res/layout/activity_update_page.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -16,41 +18,101 @@
         android:elevation="4dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
-    <ImageView
-        android:id="@+id/image"
+    <View
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="80dp"
         android:layout_below="@+id/toolbar"
-        android:layout_margin="8dp"
-        android:scaleType="centerCrop" />
+        android:background="@color/colorPrimary"
+        android:elevation="4dp" />
 
-    <TextView
-        android:id="@+id/textview"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_image_view"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image"
+        android:layout_below="@+id/toolbar"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="12dp"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardElevation="8dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/image_update_view"
+                android:layout_width="match_parent"
+                android:layout_height="320dp"
+                android:layout_alignParentTop="true"
+                android:scaleType="centerCrop" />
+
+            <TextView
+                android:id="@+id/latLong_update_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/image_update_view"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="4dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/address_update_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/latLong_update_view"
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="4dp"
+                android:textSize="16sp" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
+
+    <com.pnikosis.materialishprogress.ProgressWheel
+        android:id="@+id/progress_wheel"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_below="@+id/card_image_view"
         android:layout_centerHorizontal="true"
-        android:text="Loading Details ..."
-        android:textSize="16sp" />
+        android:layout_marginTop="12dp"
+        wheel:matProg_barColor="#5588FF"
+        wheel:matProg_progressIndeterminate="true" />
 
-
-    <TextView
-        android:id="@+id/address_view"
-        android:layout_width="wrap_content"
+    <Button
+        android:id="@+id/retryButton"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textview"
-        android:layout_centerHorizontal="true"
-        android:textSize="16sp" />
+        android:layout_alignParentBottom="true"
+        android:background="#1BBC9B"
+        android:padding="0dp"
+        android:text="RETRY"
+        android:textColor="@android:color/white"
+        app:layout_widthPercent="50%" />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="#E74C3C"
+        android:padding="0dp"
+        android:text="CANCEL"
+        android:textColor="@android:color/white"
+        app:layout_widthPercent="50%" />
 
     <Button
         android:id="@+id/saveButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/holo_orange_dark"
+        android:background="#1BBC9B"
         android:padding="0dp"
         android:text="SAVE"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:visibility="visible" />
 
-
-</RelativeLayout>
+</android.support.percent.PercentRelativeLayout>
